[gd_scene load_steps=25 format=2]

[ext_resource path="res://World/steelpanel.png" type="Texture" id=1]
[ext_resource path="res://World/whitesafetydoor.png" type="Texture" id=2]
[ext_resource path="res://World/SaveChamber.gd" type="Script" id=3]
[ext_resource path="res://Effects/DoorDustOne.png" type="Texture" id=4]
[ext_resource path="res://UI/UI_Flat_Button_Medium_Lock_02a1 copy.png" type="Texture" id=5]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Music and Sounds/button-37.wav" type="AudioStream" id=7]
[ext_resource path="res://Music and Sounds/WOODFric_Foley Moving Squeaking Wood Heavy Object Creak Groan 04_ESM_DBT.wav" type="AudioStream" id=8]
[ext_resource path="res://UI/coin_single.png" type="Texture" id=9]
[ext_resource path="res://Music and Sounds/steam_001.wav" type="AudioStream" id=10]
[ext_resource path="res://Music and Sounds/Pixel Terror 'Terror' Vocode Vocal.wav" type="AudioStream" id=11]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.196078, 0.968627, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 0.0823529, 0.0823529, 1 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 37, 40 )

[sub_resource type="DynamicFont" id=10]
size = 10
font_data = ExtResource( 6 )

[sub_resource type="CircleShape2D" id=1]
radius = 93.0215

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 100, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 100, 0, 100, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 200, 0, 100, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 300, 0, 100, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 8.0
height = 104.0

[sub_resource type="CircleShape2D" id=9]
radius = 20.0

[sub_resource type="CircleShape2D" id=13]

[node name="SaveChamber" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, -35 )
scale = Vector2( 1, 1.14 )
texture = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = -35.0
margin_top = -44.0
margin_right = 38.0
margin_bottom = 49.0

[node name="Panel2" type="Panel" parent="."]
modulate = Color( 0.701961, 0.67451, 0.67451, 1 )
self_modulate = Color( 1, 0.866667, 0.866667, 1 )
margin_left = -35.0
margin_top = -44.0
margin_right = 38.0
margin_bottom = 49.0
custom_styles/panel = SubResource( 8 )

[node name="Panel3" type="Panel" parent="."]
margin_left = -36.0
margin_top = -44.0
margin_right = 38.0
margin_bottom = 50.0
custom_styles/panel = SubResource( 11 )

[node name="Door" type="Sprite" parent="."]
position = Vector2( 2, 4 )
scale = Vector2( 1, 1.1 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Door"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door/StaticBody2D"]
position = Vector2( -1, -1.81818 )
z_index = 1
shape = SubResource( 12 )

[node name="RichTextSave2" type="RichTextLabel" parent="."]
self_modulate = Color( 1, 0.913725, 0.913725, 1 )
margin_left = -63.0
margin_top = -78.0
margin_right = 47.0
margin_bottom = -48.0
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]persistotron
  Costs 5    "
text = "persistotron
  Costs 5    "

[node name="EntryArea2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="DoorDustEffectOne" type="AnimatedSprite" parent="."]
position = Vector2( 0, 36 )
frames = SubResource( 6 )
playing = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -2, -60 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 54, -6 )
shape = SubResource( 7 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -52, -4 )
shape = SubResource( 7 )

[node name="SaveZone2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SaveZone2D"]
position = Vector2( 0, -54 )
shape = SubResource( 9 )

[node name="PopupDialog" type="PopupDialog" parent="."]
visible = true

[node name="Sprite" type="Sprite" parent="PopupDialog"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )

[node name="RichTextSave" type="RichTextLabel" parent="PopupDialog"]
margin_left = -26.0
margin_top = -10.0
margin_right = 48.0
margin_bottom = 5.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]Game Saved"
text = "Game Saved"

[node name="RichTextSave2" type="RichTextLabel" parent="PopupDialog"]
margin_left = -34.0
margin_right = 40.0
margin_bottom = 15.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[center] -5"
text = " -5"

[node name="Sprite2" type="Sprite" parent="PopupDialog"]
position = Vector2( 6, 5 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 9 )

[node name="Timer4" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Timer5" type="Timer" parent="."]
one_shot = true

[node name="Timer6" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
pitch_scale = 0.6

[node name="Groan" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -7.0
pitch_scale = 0.8

[node name="Timer7" type="Timer" parent="."]
autostart = true

[node name="Timer8" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Sprite3" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.662745 )
position = Vector2( 36, -54 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="Steam" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -13.0

[node name="Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0
pitch_scale = 0.7

[node name="SpawnArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea"]
position = Vector2( 0, 105 )
shape = SubResource( 13 )

[node name="Timer9" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_SaveChamber_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_SaveChamber_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="area_entered" from="SaveZone2D" to="." method="_on_SaveZone2D_area_entered"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_Timer6_timeout"]
[connection signal="timeout" from="Timer7" to="." method="_on_Timer7_timeout"]
[connection signal="timeout" from="Timer8" to="." method="_on_Timer8_timeout"]
[connection signal="timeout" from="Timer9" to="." method="_on_Timer9_timeout"]
